* Compatibility fix (gig.cpp): GigaStudio always expects 128 '3gnm' RIFF   chunks (patch by Ivan Maguidhir).
git-svn-id: https://svn.linuxsampler.org/svn/libgig/trunk@3656 d2c4447f-3961-4fff-bec3-96d84be9abe5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@ Version SVN trunk (?)
       vcf_type_lowpass_2p, vcf_type_lowpass_4p, vcf_type_lowpass_6p,
       vcf_type_highpass_1p, vcf_type_highpass_2p, vcf_type_highpass_4p,
       vcf_type_highpass_6p, vcf_type_bandpass_2p, vcf_type_bandreject_2p.
+    - Compatibility fix: GigaStudio always expects 128 '3gnm' RIFF chunks
+      (patch by Ivan Maguidhir).
 
   * src/tools/gigdump.cpp:
     - Print dimension region properties LFO1WaveForm, LFO2WaveForm,
