* Compatibility fix (gig.cpp): GigaStudio 3 expects '3dnm' and '3ddp'   RIFF chunks (original patch by Ivan Maguidhir).
* Bumped version (4.2.0.svn4).


git-svn-id: https://svn.linuxsampler.org/svn/libgig/trunk@3657 d2c4447f-3961-4fff-bec3-96d84be9abe5

--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@ Version SVN trunk (?)
       vcf_type_highpass_6p, vcf_type_bandpass_2p, vcf_type_bandreject_2p.
     - Compatibility fix: GigaStudio always expects 128 '3gnm' RIFF chunks
       (patch by Ivan Maguidhir).
+    - Compatibility fix: GigaStudio 3 expects '3dnm' and '3ddp' RIFF chunks
+      (original patch by Ivan Maguidhir).
 
   * src/tools/gigdump.cpp:
     - Print dimension region properties LFO1WaveForm, LFO2WaveForm,
