* gig.cpp: Region::DeleteDimensionZone(): Fixed dimensions being in   different order after deleting a dimension zone.
* Bumped version (4.2.0.svn5).


git-svn-id: https://svn.linuxsampler.org/svn/libgig/trunk@3709 d2c4447f-3961-4fff-bec3-96d84be9abe5

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,8 @@ Version SVN trunk (?)
       (patch by Ivan Maguidhir).
     - Compatibility fix: GigaStudio 3 expects '3dnm' and '3ddp' RIFF chunks
       (original patch by Ivan Maguidhir).
+    - Region::DeleteDimensionZone(): Fixed dimensions being in different order
+      after deleting a dimension zone.
 
   * src/tools/gigdump.cpp:
     - Print dimension region properties LFO1WaveForm, LFO2WaveForm,
