GIG FORMAT EXTENSION: Introducing support for 'patch' script variables.
* gig.cpp/.h: Added 5 new API methods to class gig::Instrument:
  IsScriptPatchVariableSet(), GetScriptPatchVariables(),
  GetScriptPatchVariable(), SetScriptPatchVariable(),
  UnsetScriptPatchVariable().

* gig.cpp: Store/restore values for those 'patch' variables persistently
  to/from a separate new 'SCPV' RIFF chunk as child of our own '3LS '
  RIFF list chunk (which we use for our own gig format extensions on
  Instrument level).

* Bumped version (4.2.0.svn8).



git-svn-id: https://svn.linuxsampler.org/svn/libgig/trunk@3731 d2c4447f-3961-4fff-bec3-96d84be9abe5

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,12 @@ Version SVN trunk (?)
     - Region::DeleteDimensionZone() and Region::SplitDimensionZone(): Fixed
       dimensions being in different order after deleting a dimension zone.
     - Script: Generate a persistent UUID for each script.
+    - GIG FORMAT EXTENSION: Added support for script 'patch' variables and
+      accordingly added new methods to Instrument class:
+      IsScriptPatchVariableSet(), GetScriptPatchVariables(),
+      GetScriptPatchVariable(), SetScriptPatchVariable(),
+      UnsetScriptPatchVariable(); stored persistently as new 'SCPV' RIFF chunk
+      as child of our '3LS ' list chunk on Instrument level.
 
   * src/tools/gigdump.cpp:
     - Print dimension region properties LFO1WaveForm, LFO2WaveForm,
